# Changelog

## Version 4.0.4

* Fixing #149 Cannot set subtitle disposition in 4.0+ (thanks to Zeid164)
* Fixing #150 FFmpeg extras not able to be set (thanks to kipperdawn)
* Fixing exact / fast time selector not working
* Fixing subtitle burn in not working (for picture images)
* Fixing that text based subtitles could show as being burned-in-able

## Version 4.0.3

* Fixing #146 Extraneous "None" when remove HDR is selected (thanks to Chad Johnson)

## Version 4.0.2

* Fixing #144 Remove HDR not working (thanks to Chad Johnson)
* Fixing #135 color information wasn't passed through correctly (thanks to leonardyan)
* Fixing #143 by adding legacy windows builds with Python 3.8 for time being (thanks to odignal)
* Fixing queue breaks if there is an error during conversion
* Fixing Remove HDR doesn't stay selected when returning item from queue
* Fixing resolution doesn't stay after returning from queue
* Fixing thumbnail generation preview for videos with arib-std-b67 color transfer

## Version 4.0.1

* Fixing #141 FastFlix v4.0.0 Windows Installer - Unable to launch (thanks to pcf1)

## Version 4.0.0

* Adding #59 Queue system
* Adding #94 profiles (thanks to robchap79)
* Adding #98 multi-lingual support (thanks to leonardyan)
* Adding #111 HDR10+ Optimization flag for x265 (thanks to SlashX)
* Adding #113 copy video track option (thanks to leonardyan)
* Adding |=====  | Progress Bars
* Adding support for interlaced videos
* Adding option to download newest FFmpeg on Windows
* Adding builds for MacOS and Linux
* Adding --test (imports only) and --version startup options
* Adding option to clean old (over two weeks) logs by compressing them
* Adding background fix for first subtitle track to not be default if mkvpropedit is detected (thanks to ftpmorph)
* Changing to a model based dataclass setup with a large internal re-write
* Changing so it opens the file dialog for new video to last used directory