@@ -48,15 +48,15 @@ class AV1(SettingPanel):
 
         self.mode = "CRF"
 
-        grid.addLayout(self.init_cpu_used(), 1, 0, 1, 2)
-        grid.addLayout(self.init_row_mt(), 2, 0, 1, 2)
-        grid.addLayout(self.init_tile_columns(), 3, 0, 1, 2)
-        grid.addLayout(self.init_tile_rows(), 4, 0, 1, 2)
-        grid.addLayout(self.init_usage(), 5, 0, 1, 2)
-        grid.addLayout(self.init_max_mux(), 6, 0, 1, 2)
-        grid.addLayout(self.init_pix_fmt(), 7, 0, 1, 2)
+        grid.addLayout(self.init_cpu_used(), 0, 0, 1, 2)
+        grid.addLayout(self.init_row_mt(), 1, 0, 1, 2)
+        grid.addLayout(self.init_tile_columns(), 2, 0, 1, 2)
+        grid.addLayout(self.init_tile_rows(), 3, 0, 1, 2)
+        grid.addLayout(self.init_usage(), 4, 0, 1, 2)
+        grid.addLayout(self.init_max_mux(), 5, 0, 1, 2)
+        grid.addLayout(self.init_pix_fmt(), 6, 0, 1, 2)
 
-        grid.addLayout(self.init_modes(), 0, 2, 4, 4)
+        grid.addLayout(self.init_modes(), 0, 2, 5, 4)
 
         grid.addLayout(self._add_custom(), 10, 0, 1, 6)
         grid.setRowStretch(8, 1)
