@@ -1,4 +1,4 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
-__version__ = "4.0.4b0"
+__version__ = "4.0.4b1"
 __author__ = "Chris Griffith"
